# GraphRag

./: .gitignore  Data_mp_final.xlsx  Dockerfile  Makefile  README.md  README_structure.txt  bash.exe.stackdump  cautruc.py  dev.bat  docker-compose.yml  extract_schema.py  full_code.txt  full_project_dump.txt  neo4j_config.py  pyproject.toml  pytest.ini  query_handler.py  ~$Data_mp_final.xlsx
app/: __init__.py  answer.py  config.py  context.py  intent_classifier.py  llm_client.py  main.py  metrics.py  neo4j.py  tracing.py
docs/: README_TRACING.md  faiss.md  graph_rag_report.md  monitoring.md  secrets.md  tracing.md
grafana/: graph_rag_dashboard.json
graph_rag_enterprise/: .env
graph_rag_enterprise_2/: .context.db  .env  .gitignore  README.md  demo_ml_intent.py
infra/: otel-collector-config.yaml
k8s/: cronjob-faiss-backup.yaml  deployment-app.yaml  faiss-backup-configmap.yaml  faiss-pvc.yaml  neo4j-secret.yaml  prometheus-rules.yaml  secret.yaml  service-app.yaml
kg/: 1_create_schema.cypher  build_vector_index.py  load_data.py
pre_proces/: cypher_builder.py  embeddings.py  property_normalizer.py  semantic_router.py  test_cypher.py  test_mapper.py  value_mapper.py  value_store.py
prometheus/: alerts.yml  prometheus.yml
scripts/: faiss_backup_runner.py  run_e2e_dialogue.py
tests/: test_context_manager_persistence.py  test_cypher_size_where.py  test_embedding_faiss.py  test_embedding_faiss_meta.py  test_health_faiss.py  test_hybrid_retriever_faiss.py  test_pipeline.py  test_stress_conversation.py  test_tracing_init.py  test_validator_params.py
(+145 files in other folders)
