[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-service"
version = "1.0.0"
description = "Graph RAG service for tire shop - Neo4j + Gemini AI"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "neo4j>=5.20.0",
    "numpy>=1.26.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0.0",
    "faiss-cpu>=1.8.0",
    "scikit-learn>=1.5.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
include = ["app*"]
